update cho user

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <a>Demo</a>
-        <a>Update user</a>
+        <a>Update user131231</a>
         <a>Edit user</a>
     </div>
 </body>
